# cpp-platformer

./: CMakeLists.txt  main.cpp
domain/: Boundaries.cpp  Config.cpp  Level.cpp  Level1.cpp  Movable.cpp  Player.cpp
